--- a/resources/static/css/estilos_datosProfesor.css
+++ b/resources/static/css/estilos_datosProfesor.css
@@ -29,6 +29,8 @@ body {
 h3 {
 	position: relative;
 	margin-top:30px;
+	margin-left:50px;
+	
     font-size: 30px;
 }
 
@@ -94,26 +96,30 @@ transform: scale(1.3);
 #formEleccion {
     width: 600px;
     height: 400px;
-    position:absolute;
+    position:relative;
     left: 200px;
     border-radius: 20px;
 
     font-size: 28px;
     background-color: rgba(246, 196, 34, 0.982);
-    padding: 10px;
+    padding-right: 25px;
+    
     box-sizing: border-box;
 
 }
 
 #formEleccion input[type="radio"] {
     transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
+    margin: -10px 50px 50px 50px; 
     
 }
 
-input{
-    padding-right: 50px;
+input{   
+	
+}
+label{
+	letter-spacing:5px; 
+	
 }
 
 /*** BOTON *******************************/
@@ -153,25 +159,40 @@ background-color: #d6a40e;
     width: 500px;
     height: 400px;
     position:absolute;
+    top:230px;
     right: 150px;
     border-radius: 20px;
 
-    font-size: 24px;
+    font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
 
 }
 
-#formAlta input[type="radio"] {
-    transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
+#mailAlum {
+	 position:absolute;
+	
+    margin-right:20px; 
+    margin-top:5px;
+    margin-bottom:5px;
+    padding:10px;
     
 }
 
+#nameAlum {
+	 position:absolute;
+	
+    margin-right:20px ;
+    
+}
 input{
-    padding-right: 50px;
+     display: block; /* Coloca el input debajo del label */
+    margin: 15px 10px 10px 10px; /* Ajusta el espacio entre los inputs y el borde del formulario */
+    border-radius: 18px;
+    width: 60%; /* Ajusta el ancho de los inputs */
+    padding: 8px;
+    font-size: 14px;
 }
 #botonEnviarAlta{
     position: absolute;
@@ -199,6 +220,9 @@ input{
 
 button:hover {
 background-color: #d6a40e;
+}
+.tituloForm{
+	font-size:24px;
 }
 
 /*** FORMULARIO BAJA *******************************/
