--- a/css/estilos_datosProfesor.css
+++ b/css/estilos_datosProfesor.css
@@ -110,6 +110,7 @@ transform: scale(1.3);
 #formEleccion input[type="radio"] {
     margin-right: 20px;
     margin-top:20px;
+    transform:scale(2);/*para hacer los radio más accesibles*/
      
 }
 
@@ -149,8 +150,8 @@ background-color: #d6a40e;
 /*** FORMULARIO ALTA *******************************/
 
 #formAlta {
-    width: 500px;
-    height: 450px;
+    width: 480px;
+    height: 400px;
     position:absolute;
     top:230px;
     right: 150px;
@@ -169,7 +170,7 @@ background-color: #d6a40e;
     margin-left: 70px;
     border-radius: 18px;
     width: 60%; /* Ajusta el ancho de los inputs */
-    padding: 15px;
+    padding: 12px;
     font-size: 12px;
 }
 #botonEnviarAlta{
@@ -177,7 +178,7 @@ background-color: #d6a40e;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 35px;
+    bottom: 14px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -205,42 +206,42 @@ background-color: #d6a40e;
 label{
 	letter-spacing:5px; 
     margin-top: 3px;
-    margin-left: 30px;
+        margin-bottom: 3px;
+        margin-left: 30px;
     display: block; 
 }
 
 /*** FORMULARIO BAJA *******************************/
 
 #formBaja {
-    width: 400px;
-    height: 320px;
+      width: 500px;
+    height: 350px;
     position:absolute;
-    right: 200px;
+    top:230px;
+    right: 150px;
     border-radius: 20px;
 
-    font-size: 24px;
+    font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
 
-}
 
-#formBaja input[type="radio"] {
-    transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
-    
 }
-
-input{
-    padding-right: 50px;
+#formBaja input {  
+    display: block; /* Coloca el input debajo del label */
+    margin-left: 70px;
+    border-radius: 18px;
+    width: 60%; /* Ajusta el ancho de los inputs */
+    padding: 12px;
+    font-size: 12px;
 }
 #botonEnviarBaja{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
+    bottom: 22px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -262,40 +263,50 @@ input{
 button:hover {
 background-color: #d6a40e;
 }
-
+.tituloForm{
+	font-size:24px;
+}
+label{
+	letter-spacing:5px; 
+    margin-top: 3px;
+        margin-bottom: 3px;
+        margin-left: 30px;
+    display: block; 
+}
 
 /*** FORMULARIO MODIFICACION *******************************/
 
 #formModificacion {
-    width: 400px;
-    height: 900px;
+    width: 480px;
+    height: 400px;
     position:absolute;
-    right: 200px;
+    top:230px;
+    right: 150px;
     border-radius: 20px;
 
-    font-size: 24px;
+    font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
 
 }
 
-#formModificacion input[type="radio"] {
-    transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
-    
+
+#formModificacion input {  
+    display: block; /* Coloca el input debajo del label */
+    margin-left: 70px;
+    border-radius: 18px;
+    width: 60%; /* Ajusta el ancho de los inputs */
+    padding: 12px;
+    font-size: 12px;
 }
 
-input{
-    padding-right: 50px;
-}
 #botonEnviarModificacion{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
+    bottom: 14px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -317,4 +328,15 @@ input{
 button:hover {
 background-color: #d6a40e;
 }
+.tituloForm{
+	font-size:24px;
+}
+label{
+	letter-spacing:5px; 
+    margin-top: 3px;
+        margin-bottom: 3px;
+        margin-left: 30px;
+    display: block; 
+}
+
 
