--- a/css/estilos_datosProfesor.css
+++ b/css/estilos_datosProfesor.css
@@ -5,6 +5,10 @@ body {
     align-items: center;
 }
 
+::placeholder{
+	color:#004040;
+	letter-spacing:3px;
+}
 /*** TITULO WEB  *******************************/
 
 .header {
@@ -150,28 +154,33 @@ background-color: #d6a40e;
 /*** FORMULARIO ALTA *******************************/
 
 #formAlta {
-    width: 480px;
+    width: 550px;
     height: 400px;
     position:absolute;
     top:230px;
-    right: 150px;
+    right: 120px;
     border-radius: 20px;
 
     font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
     padding: 5px;
     box-sizing: border-box;
+    
+    
 
 }
 
 
 #formAlta input {  
-    display: block; /* Coloca el input debajo del label */
-    margin-left: 70px;
+    margin-left: 140px;
+    margin-top:20px;
     border-radius: 18px;
-    width: 60%; /* Ajusta el ancho de los inputs */
-    padding: 12px;
-    font-size: 12px;
+    width: 40%; /* Ajusta el ancho de los inputs */
+    padding: 10px;
+    font-size: 14px;
+    text-align:center;
+    
+  
 }
 #botonEnviarAlta{
     position: absolute;
@@ -205,20 +214,21 @@ background-color: #d6a40e;
 }
 label{
 	letter-spacing:5px; 
-    margin-top: 3px;
-        margin-bottom: 3px;
-        margin-left: 30px;
+    top: 3px;
+     margin-top: 3px;
+     margin-left: 100px;
     display: block; 
 }
+
 
 /*** FORMULARIO BAJA *******************************/
 
 #formBaja {
-      width: 500px;
-    height: 350px;
+      width: 550px;
+    height: 400px;
     position:absolute;
     top:230px;
-    right: 150px;
+    right: 120px;
     border-radius: 20px;
 
     font-size: 20px;
@@ -230,18 +240,23 @@ label{
 }
 #formBaja input {  
     display: block; /* Coloca el input debajo del label */
-    margin-left: 70px;
+    margin-left: 120px;  
+      margin-top: 50px;
+    
     border-radius: 18px;
-    width: 60%; /* Ajusta el ancho de los inputs */
-    padding: 12px;
-    font-size: 12px;
+    width: 40%; /* Ajusta el ancho de los inputs */
+    padding: 10px;
+    font-size: 14px;
+    text-align:center;
+ 
+    color:black;
 }
 #botonEnviarBaja{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 22px;
+    bottom: 32px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -268,46 +283,38 @@ background-color: #d6a40e;
 }
 label{
 	letter-spacing:5px; 
-    margin-top: 3px;
-        margin-bottom: 3px;
-        margin-left: 30px;
+    top: 23px;
+     margin-top: 53px;
+     margin-left: 100px;
     display: block; 
 }
 
 /*** FORMULARIO MODIFICACION *******************************/
 
 #formModificacion {
-    width: 480px;
+    width: 550px;
     height: 400px;
     position:absolute;
     top:230px;
-    right: 150px;
+    right: 120px;
     border-radius: 20px;
 
-    font-size: 20px;
-    background-color: rgba(211, 227, 166, 0.982);
+   font-size: 22px;
+    background-color:rgb(225, 236, 193);
     padding: 5px;
     box-sizing: border-box;
 
 }
 
 
-#formModificacion input {  
-    display: block; /* Coloca el input debajo del label */
-    margin-left: 70px;
-    border-radius: 18px;
-    width: 60%; /* Ajusta el ancho de los inputs */
-    padding: 12px;
-    font-size: 12px;
-}
 
 #botonEnviarModificacion{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 14px;
-    left: 25%;
+    bottom: 16px;
+    left: 30%;
     width: 220px;
     height: 60px;
     text-align: center;
@@ -331,12 +338,70 @@ background-color: #d6a40e;
 .tituloForm{
 	font-size:24px;
 }
-label{
-	letter-spacing:5px; 
-    margin-top: 3px;
-        margin-bottom: 3px;
-        margin-left: 30px;
-    display: block; 
+/********************* INPUT EMAIL*/
+#mailTutor{
+	 border-radius: 18px;
+    width: 40%; 
+    font-size: 14px;
+    padding:10px;
+    color:black;
+    text-align:center;
+    margin-left:150px;
 }
+	
+/********************* SELECT*/
+
+#opcionesMod{
+    margin-left:160px;
+   margin-top: 20px;
+    border-radius: 18px;
+    width: 40%; 
+    padding: 12px;
+    font-size: 16px;
+	
+}
+
+/********************* INPUTS RELLENA-SELECT*/
+
+#contenedorOpciones{
+	display:flex;
+	flex-direction:row;
+	 justify-content: space-between;
+	margin-top: 12px;
+    padding: 0 20px;
+    align-items:center;
+	
+}
+
+#actual, #nuevo{
+	    display: flex;
+	align-items:center;
+	flex-direction:column;
+	 width: 50%;		
+}
+
+#actual label, #nuevo label{
+    font-size: 22px;
+	text-align:center;
+	margin-bottom:10px;
+		margin-right:8px;
+	
+	justify-content:center;
+		
+    
+}
+
+#actual input, #nuevo input {
+    border-radius: 18px;
+    width: 80%; 
+    font-size: 14px;
+    padding: 10px;
+    text-align: center;
+    	margin-bottom:20px;
+    
+}
+
+
+
 
 
