--- a/resources/static/css/estilos_datosProfesor.css
+++ b/resources/static/css/estilos_datosProfesor.css
@@ -5,6 +5,10 @@ body {
     align-items: center;
 }
 
+::placeholder{
+	color:#004040;
+	letter-spacing:3px;
+}
 /*** TITULO WEB  *******************************/
 
 .header {
@@ -39,7 +43,7 @@ h3 {
      width: 120px; 
     height: 100px;
      position: absolute;
-    right: 100px;
+    right: 60px;
     top: -0px;
     background-color: transparent;
     border: none;
@@ -67,7 +71,7 @@ transform: scale(1.3);
     width: 100px; 
     height: 120px;
     position: absolute;
-    left: 100px;
+    left: 50px;
     top: -10px;
     background-color: transparent;
     border: none;
@@ -94,33 +98,27 @@ transform: scale(1.3);
 
 /*** FORMULARIO *******************************/
 #formEleccion {
-    width: 600px;
-    height: 400px;
-    position:relative;
-    left: 200px;
+   	position:relative;
+    width: 550px;
+    height: 400PX;
+   margin-top: 20px;
+    left: 100px;
+    
     border-radius: 20px;
-
     font-size: 28px;
     background-color: rgba(246, 196, 34, 0.982);
-    padding-right: 25px;
-    
+    padding: 30px;
     box-sizing: border-box;
-
 }
 
 #formEleccion input[type="radio"] {
-    transform: scale(1.5);
-    margin: -10px 50px 50px 50px; 
-    
+    margin-right: 20px;
+    margin-top:20px;
+    transform:scale(2);/*para hacer los radio más accesibles*/
+     
 }
 
-input{   
-	
-}
-label{
-	letter-spacing:5px; 
-	
-}
+
 
 /*** BOTON *******************************/
 
@@ -130,7 +128,7 @@ label{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
+    bottom: 20px;
     left: 25%;
     width: 280px;
     height: 100px;
@@ -156,50 +154,40 @@ background-color: #d6a40e;
 /*** FORMULARIO ALTA *******************************/
 
 #formAlta {
-    width: 500px;
+    width: 550px;
     height: 400px;
     position:absolute;
     top:230px;
-    right: 150px;
+    right: 120px;
     border-radius: 20px;
 
     font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
     padding: 5px;
     box-sizing: border-box;
-
-}
-
-#mailAlum {
-	 position:absolute;
-	
-    margin-right:20px; 
-    margin-top:5px;
-    margin-bottom:5px;
-    padding:10px;
     
+    
+
 }
 
-#nameAlum {
-	 position:absolute;
-	
-    margin-right:20px ;
-    
-}
-input{
-     display: block; /* Coloca el input debajo del label */
-    margin: 15px 10px 10px 10px; /* Ajusta el espacio entre los inputs y el borde del formulario */
+
+#formAlta input {  
+    margin-left: 140px;
+    margin-top:20px;
     border-radius: 18px;
-    width: 60%; /* Ajusta el ancho de los inputs */
-    padding: 8px;
+    width: 40%; /* Ajusta el ancho de los inputs */
+    padding: 10px;
     font-size: 14px;
+    text-align:center;
+    
+  
 }
 #botonEnviarAlta{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
+    bottom: 14px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -224,39 +212,51 @@ background-color: #d6a40e;
 .tituloForm{
 	font-size:24px;
 }
+label{
+	letter-spacing:5px; 
+    top: 3px;
+     margin-top: 3px;
+     margin-left: 100px;
+    display: block; 
+}
+
 
 /*** FORMULARIO BAJA *******************************/
 
 #formBaja {
-    width: 400px;
-    height: 320px;
+      width: 550px;
+    height: 400px;
     position:absolute;
-    right: 200px;
+    top:230px;
+    right: 120px;
     border-radius: 20px;
 
-    font-size: 24px;
+    font-size: 20px;
     background-color: rgba(211, 227, 166, 0.982);
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
 
-}
 
-#formBaja input[type="radio"] {
-    transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
+}
+#formBaja input {  
+    display: block; /* Coloca el input debajo del label */
+    margin-left: 120px;  
+      margin-top: 50px;
     
-}
-
-input{
-    padding-right: 50px;
+    border-radius: 18px;
+    width: 40%; /* Ajusta el ancho de los inputs */
+    padding: 10px;
+    font-size: 14px;
+    text-align:center;
+ 
+    color:black;
 }
 #botonEnviarBaja{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
+    bottom: 32px;
     left: 25%;
     width: 220px;
     height: 60px;
@@ -278,41 +278,43 @@ input{
 button:hover {
 background-color: #d6a40e;
 }
-
+.tituloForm{
+	font-size:24px;
+}
+label{
+	letter-spacing:5px; 
+    top: 23px;
+     margin-top: 53px;
+     margin-left: 100px;
+    display: block; 
+}
 
 /*** FORMULARIO MODIFICACION *******************************/
 
 #formModificacion {
-    width: 400px;
-    height: 900px;
+    width: 550px;
+    height: 400px;
     position:absolute;
-    right: 200px;
+    top:230px;
+    right: 120px;
     border-radius: 20px;
 
-    font-size: 24px;
-    background-color: rgba(211, 227, 166, 0.982);
-    padding: 10px;
+   font-size: 22px;
+    background-color:rgb(225, 236, 193);
+    padding: 5px;
     box-sizing: border-box;
 
 }
 
-#formModificacion input[type="radio"] {
-    transform: scale(1.5);
-    margin-right: 10px;
-    margin: 10px 20px; 
-    
-}
 
-input{
-    padding-right: 50px;
-}
+
 #botonEnviarModificacion{
     position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     letter-spacing: 2px;
-    bottom: 5px;
-    left: 25%;
+    bottom: 16px;
+    left: 30%;
     width: 220px;
     height: 60px;
     text-align: center;
@@ -333,4 +335,73 @@ input{
 button:hover {
 background-color: #d6a40e;
 }
+.tituloForm{
+	font-size:24px;
+}
+/********************* INPUT EMAIL*/
+#mailTutor{
+	 border-radius: 18px;
+    width: 40%; 
+    font-size: 14px;
+    padding:10px;
+    color:black;
+    text-align:center;
+    margin-left:150px;
+}
+	
+/********************* SELECT*/
+
+#opcionesMod{
+    margin-left:160px;
+   margin-top: 20px;
+    border-radius: 18px;
+    width: 40%; 
+    padding: 12px;
+    font-size: 16px;
+	
+}
+
+/********************* INPUTS RELLENA-SELECT*/
+
+#contenedorOpciones{
+	display:flex;
+	flex-direction:row;
+	 justify-content: space-between;
+	margin-top: 12px;
+    padding: 0 20px;
+    align-items:center;
+	
+}
+
+#actual, #nuevo{
+	    display: flex;
+	align-items:center;
+	flex-direction:column;
+	 width: 50%;		
+}
+
+#actual label, #nuevo label{
+    font-size: 22px;
+	text-align:center;
+	margin-bottom:10px;
+		margin-right:8px;
+	
+	justify-content:center;
+		
+    
+}
+
+#actual input, #nuevo input {
+    border-radius: 18px;
+    width: 80%; 
+    font-size: 14px;
+    padding: 10px;
+    text-align: center;
+    	margin-bottom:20px;
+    
+}
+
+
+
+
 
