--- a/templates/datos_alumno_profesor.html
+++ b/templates/datos_alumno_profesor.html
@@ -73,14 +73,11 @@
 
         <h3 class="tituloForm">Dar de alta a un alumno</h3>
 
-               <label for="mailAlum">EMAIL DEL ALUMNO:</label> 
-                	                <br>
-                	<input title="aquí el email del alumno" type="email" name="mailAlum" id="mailAlum" placeholder="Tu mail de usuario" maxlength="20" required />
-                                     <br>
+               <label for="mailAlum">EMAIL</label> 
+                	<input title="aquí el email del tutor" type="email" name="mailAlum" id="mailAlum" placeholder="Mail de usuario" maxlength="20" required />
                       
-                <label for="nameAlum">NOMBRE DEL ALUMNO:</label> 
-        			                <br>
-        			<input  title="aquí el nombre del alumno" type="text" name="nameAlum" id="nameAlum" placeholder="Aquí el nombre del alumno" maxlength="10" required/>
+                <label for="nameAlum">NOMBRE</label> 
+        			<input  title="aquí el nombre del alumno" type="text" name="nameAlum" id="nameAlum" placeholder="Nombre del alumno" maxlength="10" required/>
 
         <button type="submit" id="botonEnviarAlta">DAMOS DE ALTA</button>
     </form>
@@ -88,12 +85,11 @@
 
 <!--FORMULARIO BAJA ---------------------------->
     <form id="formBaja"   hidden> 
-        <h3>Dar de baja a un alumno</h3>
+        <h3 class="tituloForm">Dar de baja a un alumno</h3>
 
 
-               <label for="mailAlum">EMAIL DEL ALUMNO:</label> 
-      							  <br>
-                <input title="aquí el email del alumno" type="email" name="mailAlum" id="mailLog" placeholder="Tu mail de usuario" maxlength="20" required>
+               <label for="mailAlum">EMAIL </label> 
+                <input title="aquí el email del tutor" type="email" name="mailAlum" id="mailLog" placeholder="Tu mail de usuario" maxlength="20" required>
                       <!-- >  ID DEL ALUMNO:
         
          <input type="text" name="idAlum" id="idAlum" placeholder="ID del alumno" maxlength="20"  >
@@ -108,32 +104,46 @@
    
 
 <form id="formModificacion" hidden> 
-    <h3>Modificamos datos de un alumno</h3>
 
-    EMAIL DEL ALUMNO A MODIFICAR
-    <br><br>
-    <input type="email" name="mailUser" id="mailUserUp" placeholder="El email a modificar" maxlength="20" required>
-    <br><br>
-    
-     NUEVO NOMBRE DEL ALUMNO 
-    <br><br>
-    <input type="text" name="nameAlum" id="nameAlumUp" placeholder="El nombre NUEVO" maxlength="10">
-    <br><br>
-    
-     NUEVO MAIL DEL ALUMNO 
-    <br><br>
-    <input type="email" name="emailAlum" id="emailAlumUp" placeholder="El MAIL NUEVO" maxlength="20">
-    <br><br>
+    <h3 class="tituloForm">Modificar datos de un alumno</h3>
 
-    <p><strong>Selecciona qué deseas modificar:</strong></p>
-    <input type="radio" id="modificarNombre" name="modificacion" value="nombre">
-    <label for="modificarNombre">Modificar Nombre</label><br>
-    <input type="radio" id="modificarEmail" name="modificacion" value="email">
-    <label for="modificarEmail">Modificar Email</label><br>
-    <input type="radio" id="modificarAmbos" name="modificacion" value="ambos">
-    <label for="modificarAmbos">Modificar Ambos</label><br><br>
+		 <input title="escribe aquí el mail del tutor"  type="email" name="mailTutor" id="mailTutor" placeholder="MAIL TUTOR" minlength="12"maxlength="25" required>
+
+<!-----------------SELECT--------------------------->
+			
+			<select title="elige qué modificarás" id="opcionesMod">
+			
+        <option >Modificar ...</option>
+        <option value="nombre" id="modificarNombre">Modificar Nombre</option>
+        <option value="email" id="modificarMail">Modificar Email</option>
+      
+   			</select>	    
     
-    <button type="submit" id="botonEnviarModificacion">PASAMOS A MODIFICAR</button>
+ 
+     <div id="contenedorOpciones" >
+     
+      <!-----------------CONTENEDO OPCION 1--------------------------->
+     
+     
+     	<div id="actual">
+     	
+		       <label  for="nameAlumUp" > ACTUAL</label> 
+		   		
+		   		 <input  type="text" name="nameAlum" id="actual" placeholder="NOMBRE/MAIL" maxlength="25" required>
+	       
+	     </div>  
+ <!-----------------CONTENEDO OPCION 2--------------------------->
+	     
+	  <div id="nuevo">
+	     
+	        <label  for="emailAlumUp"> NUEVO </label> 
+	  
+	   			 <input  type="text" name="emailAlum" id="nuevo" placeholder="NOMBRE/MAIL" maxlength="25" required>
+	
+	 </div>  
+	 <!---------------------------->
+	    <button  type="submit" id="botonEnviarModificacion">MODIFICAR</button>
+	</div>
 </form>
 
 
