LISTA_ALUMNOS + BDD ARREGLO
* HTML
*CSS
*SCRIPT
*** gestionada la muestra de lista de alumnos según en JSON recibido
-->FALTA  ARREGLAR PAGINA LISTA DUPLICADA AL CLICAR UN ALUMNO
*SERVER
***revisión y limpieza de vínculos entre tablas
*** revisión de repositorio, servicio por errores en spring
*** preparada las consultas, controladores para mostrar la lista de alumnos de la letra de clase de su profesor

--- a/templates/datos_alumno_profesor.html
+++ b/templates/datos_alumno_profesor.html
@@ -78,6 +78,17 @@
                       
                 <label for="nameAlum">NOMBRE</label> 
         			<input  title="aquí el nombre del alumno" type="text" name="nameAlum" id="nameAlum" placeholder="Nombre del alumno" maxlength="10" required/>
+        			
+        			 <label for="niaAlum">NIA</label> 
+        			<input  title="aquí el NIA del alumno" type="text" name="niaAlum" id="niaAlum" placeholder="Nia del alumno" maxlength="8" required/>
+        			
+        			 <label for="primApellidoUsuario">PRIMER APELLIDO</label> 
+        			<input  title="aquí el apellido 1 del alumno" type="text" name="primApellidoUsuario" id="primApellidoUsuario" placeholder="apellido 1 del alumno" maxlength="25" required/>
+        			
+        			<label for="secApellidoUsuario">SEGUNDO APELLIDO</label> 
+        			<input  title="aquí el apellido 2 del alumno" type="text" name="secApellidoUsuario" id="secApellidoUsuario" placeholder="apellido 2 del alumno" maxlength="25" required/>
+        			
+        			
 
         <button type="submit" id="botonEnviarAlta">DAMOS DE ALTA</button>
     </form>
