--- a/templates/lista_alumnos_estadisticas.html
+++ b/templates/lista_alumnos_estadisticas.html
@@ -55,42 +55,11 @@
         
 	</div>
 	
-<h3>Pincha en el enlace del alumno para ver su avance</h3>
+<h3>Pulsa el nombre del alumno del que desees ver su avance</h3>
 
 <!--ZONA LISTA DE ALUMNOS ---------------------------->
 
     <div id="divListaClase">
-            <ol>
-                <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MIGUEL DE LA TORRE SANCHEZ</a></li>
-                <li><a href="">MARIA DEL POZO</a></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MIGUEL DE LA TORRE SANCHEZ</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-           <li><a href="">MIGUEL DE LA TORRE SANCHEZ</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
-            <li><a href="">MARIA DEL POZO</a></li>
            
             
         </div>
